# blake2b-py

./: .bumpversion.cfg  .gitignore  .travis.yml  Cargo.toml  Dockerfile  Dockerfile.circleci  LICENSE  Makefile  README.md  appveyor.yml  pyproject.toml  requirements-dev.txt  tox.ini
.circleci/: config.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: main.yml
blake2_py/: .gitignore  Cargo.toml  Makefile  requirements-dev.txt  setup.py  tox.ini
blake2_py/blake2/: __init__.py
blake2_py/src/: lib.rs
blake2b/: __init__.py
ci/: collectwheels.py
src/: blake2.py  blake2b.rs  lib.rs
tests/: reference_impl.py  test_blake2b_compress.py
