[package]
name = "blake2b-py"
version = "0.3.2"
authors = ["David Sanders <davesque@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/ethereum/blake2b-py"
description = "Blake2b hashing in Rust with Python bindings."

[dependencies]
pyo3 = { version = "~0.23", features = ["extension-module"] }

[dev-dependencies]
hex = "~0.4"

[lib]
name = "blake2b"
crate-type = ["cdylib"]

[profile.dev]
overflow-checks = false

[profile.test]
overflow-checks = false
