[package]
name = "blake2_py"
version = "0.1.0"
authors = ["David Sanders <davesque@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/davesque/blake2"
description = "Python bindings for blake2 compression in Rust."

[dependencies]
blake2 = { path = "../", version = "0.1.0" }
pyo3 = { version = "0.8", features = ["extension-module"] }

[lib]
name = "blake2"
crate-type = ["cdylib"]

[profile.dev]
overflow-checks = false

[profile.test]
overflow-checks = false
